[project]
name = "pybass-emu"
dynamic = ["version"]
description = "Bayesian Adaptive Spline Surfaces"
authors = [
    {name = "Devin Francom", email = "dfrancom@lanl.gov"},
    {name = "Arthur Lui", email = "luiarthur@gmail.com"},
    {name = "J. Derek Tucker", email = "jdtuck@sandia.gov"}
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["emulator"]
dependencies=[
  "numpy",
  "matplotlib",
  "scipy",
]
classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

[project.urls]
repository = "http://www.github.com/lanl/pybass"
Repository = "https://github.com/lanl/pybass"
Issues = "https://github.com/lanl/pybass/issues"

[build-system]
requires = ["setuptools>=74.1", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[dependency-groups]
dev = [
    "pytest>=7.0.1",
]
