[project]
name = "pybass-emu"
dynamic = ["version"]
description = "Bayesian Adaptive Spline Surfaces"
authors = [
    {name = "Devin Francom", email = "dfrancom@lanl.gov"},
    {name = "Arthur Lui", email = "luiarthur@gmail.com"},
    {name = "J. Derek Tucker", email = "jdtuck@sandia.gov"}
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["emulator"]
classifiers = [
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
dependencies = [
    "matplotlib>=3.7.3",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "pandas>=2.0.3",
]

[project.urls]
repository = "http://www.github.com/lanl/pybass"
Repository = "https://github.com/lanl/pybass"
Issues = "https://github.com/lanl/pybass/issues"

[build-system]
requires = ["setuptools>=68.1", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=7.0.1",
]

[tool.ruff]
line-length = 80
preview = true

[tool.ruff.lint]
extend-select = ["I"]  # W505 (doc-line-too-long); D (pydocstyle)
pydocstyle.convention = "numpy"
pycodestyle.max-doc-length = 80

# Ignore test file documentation linting.
[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["D"]
"src/**/__init__.py" = ["F", "E402"]
